--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@
       // Redirect to index.html while preserving route
       const redirectTo = '/' + location.pathname.split('/').slice(2).join('/');
       sessionStorage.redirect = redirectTo;
-      window.location.href = '/my-vue-app/';
+      window.location.href = '/soot-arrays/';
     </script>
   </head>
   <body></body>
